--- a/index.html
+++ b/index.html
@@ -12,16 +12,22 @@
 <body>
     <div class="main">
         <div class="page1">
-           <div class="row1">
-            <div class="part1"><a href="mailto:uutkarsh97@gmail.com">demo@gmail.com</a></div>
-            <div class="part2"><a href="tel:9876543210">+91-9876543210</a></div>
+           <div class="row1 for-hover">
+            <div class="part1 contacts"><a href="mailto:uutkarsh97@gmail.com">demo@gmail.com</a></div>
+
+            <div class="part-small "><a href="mailto:uutkarsh97@gmail.com"><i class="fa-solid fa-envelope"></i></a></div>
+
+            <div class="part2 contacts"><a href="tel:9876543210">+91-9876543210</a></div>
+            
+            <div class="part-small"><a href="tel:9876543210"><i class="fa-solid fa-phone"></i></a></div>
+
             <div class="part3">
-                <div class="part1-div"><i class="fa-brands fa-facebook"></i></div>
-                <div class="part1-div"><i class="fa-brands fa-square-instagram"></i></div>
-                <div class="part1-div"><i class="fa-brands fa-twitter"></i></div>
+                <div class="part1-div"><a href="#"><i class="fa-brands fa-facebook"></i></a></div>
+                <div class="part1-div"><a href="#"><i class="fa-brands fa-square-instagram"></i></a></div>
+                <div class="part1-div"><a href="#"><i class="fa-brands fa-twitter"></i></a></a></div>
             </div>
            </div>
-           <div class="row2">
+           <div class="row2 for-hover">
             <div class="col1">
                 <img src="./image/img2.jpg" alt="">
             </div>
