--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div class="main">
         <div class="page1">
            <div class="row1 for-hover">
-            <div class="part1 contacts"><a href="mailto:uutkarsh97@gmail.com">demo@gmail.com</a></div>
+            <div class="part1 contacts"><a href="mailto:uutkarsh97@gmail.com"><i class="fa-solid fa-envelope"></i>:demo@gmail.com</a></div>
 
             <div class="part-small "><a href="mailto:uutkarsh97@gmail.com"><i class="fa-solid fa-envelope"></i></a></div>
 
-            <div class="part2 contacts"><a href="tel:9876543210">+91-9876543210</a></div>
+            <div class="part2 contacts"><a href="tel:9876543210"><i class="fa-solid fa-phone"></i>:+919876543210</a></div>
             
             <div class="part-small"><a href="tel:9876543210"><i class="fa-solid fa-phone"></i></a></div>
 
