--- a/index.html
+++ b/index.html
@@ -60,9 +60,6 @@
             <div class="row3">
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                        <!-- <div class="swiper-slide"><img
-                                src="https://images.unsplash.com/photo-1535982330050-f1c2fb79ff78?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGZvciUyMGNvbGxlZ2VzfGVufDB8fDB8fHww"
-                                alt=""></div> -->
                         <div class="swiper-slide"><img
                                 src="https://plus.unsplash.com/premium_photo-1691588961537-60e5edc5d167?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OTd8fGZvciUyMGNvbGxlZ2VzfGVufDB8fDB8fHww"
                                 alt=""></div>
@@ -83,25 +80,34 @@
             </div>
         </div>
         <div class="page2">
-                <div class="row1">
-                    <div class="col1">
-                        <h5>About University</h5>
-                    </div>
-                    <div class="col2">
-                        <h1>educatiion is not <br> prepration for life; <br> education is life itself </h1>
-                    </div>
+            <div class="row1">
+                <div class="col1">
+                    <h5>About University</h5>
                 </div>
-                <div class="row2">
-                    <div class="col1"></div>
-                    <div class="col2"></div>
-                    <div class="col3"></div>
+                <div class="col2">
+                    <h1>educatiion is not <br> prepration for life; <br> education is life itself </h1>
                 </div>
-                <div class="row3">
-                    <div class="col1"></div>
-                    <div class="col2"></div>
-                    <div class="col3"></div>
-                </div>
+            </div>
+            <div class="row2">
+                <div class="col1 image-containerfor-row2"></div>
+                <div class="col2 image-containerfor-row2"><img
+                    src="https://plus.unsplash.com/premium_photo-1681248156422-c01a2c803588?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Y2xhc3Nyb29tfGVufDB8fDB8fHww"
+                    alt=""></div>
+                <div class="col3 image-containerfor-row2"><img
+                    src="https://images.unsplash.com/photo-1577985043696-8bd54d9f093f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FtcHVzfGVufDB8fDB8fHww"
+                    alt=""></div>
+            </div>
+            <div class="row3 ">
+                <div class="col1 image-containerfor-row2"><img
+                    src="https://plus.unsplash.com/premium_photo-1682974403683-591557aa631b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZGVncmVlJTIwaW4lMjBjb2xsZWdlfGVufDB8fDB8fHww"
+                    alt=""></div>
+                <div class="col2 image-containerfor-row2"><img
+                    src="https://images.unsplash.com/photo-1544640808-32ca72ac7f37?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGNsYXNzcm9vbXxlbnwwfHwwfHx8MA%3D%3D"
+                    alt=""></div>
+                <div class="col3 image-containerfor-row2"></div>
+            </div>
         </div>
+        .pa
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
