--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             </div>
             <div class="row3">
-                <div class="swiper mySwiper">
+                <!-- <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide"><img
                                 src="https://plus.unsplash.com/premium_photo-1691588961537-60e5edc5d167?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OTd8fGZvciUyMGNvbGxlZ2VzfGVufDB8fDB8fHww"
@@ -75,90 +75,92 @@
                     </div>
                     <div class="swiper-button-next both-buttons"></div>
                     <div class="swiper-button-prev both-buttons"></div>
-                    <!-- <div class="swiper-pagination"></div> -->
-                </div>
+                    <div class="swiper-pagination"></div> -->
+                <img src="./image/img1.jpg" alt="">
             </div>
         </div>
-        <div class="page2">
-            <div class="row1">
-                <div class="col1">
-                    <h5>About University</h5>
-                </div>
-                <div class="col2">
-                    <h1>educatiion is not <br> prepration for life; <br> education is life itself </h1>
-                </div>
+    </div>
+    <div class="page2">
+        <div class="row1">
+            <div class="col1">
+                <h5>About University</h5>
             </div>
-            <div class="row2">
-                <div class="col1 image-containerfor-row2"></div>
-                <div class="col2 image-containerfor-row2"><img
-                        src="https://plus.unsplash.com/premium_photo-1681248156422-c01a2c803588?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Y2xhc3Nyb29tfGVufDB8fDB8fHww"
-                        alt=""></div>
-                <div class="col3 image-containerfor-row2"><img
-                        src="https://images.unsplash.com/photo-1577985043696-8bd54d9f093f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FtcHVzfGVufDB8fDB8fHww"
-                        alt=""></div>
-            </div>
-            <div class="row3 ">
-                <div class="col1 image-containerfor-row2"><img
-                        src="https://plus.unsplash.com/premium_photo-1682974403683-591557aa631b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZGVncmVlJTIwaW4lMjBjb2xsZWdlfGVufDB8fDB8fHww"
-                        alt=""></div>
-                <div class="col2 image-containerfor-row2"><img
-                        src="https://images.unsplash.com/photo-1544640808-32ca72ac7f37?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGNsYXNzcm9vbXxlbnwwfHwwfHx8MA%3D%3D"
-                        alt=""></div>
-                <div class="col3 image-containerfor-row2"></div>
+            <div class="col2">
+                <h1>educatiion is not <br> prepration for life; <br> education is life itself </h1>
             </div>
         </div>
-        <div class="page3">
-            <div class="row1"></div>
-            <div class="row2">
-                <h1>academic programes</h1>
-                <h6>exolor university's 10+ cources across various specialization that <br>provoke intellectual and
-                    intuitive learning among students.</h6>
-            </div>
-            <div class="row3">
-                <h6>/bachelor</h6>
-                <h6>/masters</h6>
-                <h6>/phd</h6>
-            </div>
-            <div class="row4">
-                    <!-- Swiper -->
-                    <div class="swiper2 mySwiper2">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide2">
-                                <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
-                            </div>
-                            <div class="swiper-slide2">
-                                <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
-                            </div>
-                            <div class="swiper-slide2">
-                                <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
-                            </div>
-                            <div class="swiper-slide2">
-                                <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
-                            </div>
-                            <div class="swiper-slide2">
-                                <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
-                            </div>
-                            <!-- <div class="swiper-slide2">
-                                <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
-                            </div>
-                            <div class="swiper-slide2">
-                                <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
-                            </div> -->
-                            <!-- <div class="swiper-slide2">
-                                <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
-                            </div>
-                            <div class="swiper-slide2">
-                                <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
-                            </div> -->
-                        </div>
-                        <div class="swiper-pagination"></div>
-                    </div>
+        <div class="row2">
+            <div class="col1 image-containerfor-row2"></div>
+            <div class="col2 image-containerfor-row2"><img
+                    src="https://plus.unsplash.com/premium_photo-1681248156422-c01a2c803588?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Y2xhc3Nyb29tfGVufDB8fDB8fHww"
+                    alt=""></div>
+            <div class="col3 image-containerfor-row2"><img
+                    src="https://images.unsplash.com/photo-1577985043696-8bd54d9f093f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FtcHVzfGVufDB8fDB8fHww"
+                    alt=""></div>
+        </div>
+        <div class="row3 ">
+            <div class="col1 image-containerfor-row2"><img
+                    src="https://plus.unsplash.com/premium_photo-1682974403683-591557aa631b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZGVncmVlJTIwaW4lMjBjb2xsZWdlfGVufDB8fDB8fHww"
+                    alt=""></div>
+            <div class="col2 image-containerfor-row2"><img
+                    src="https://images.unsplash.com/photo-1544640808-32ca72ac7f37?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGNsYXNzcm9vbXxlbnwwfHwwfHx8MA%3D%3D"
+                    alt=""></div>
+            <div class="col3 image-containerfor-row2"></div>
+        </div>
+    </div>
+    <div class="page3">
+        <div class="row1"></div>
+        <div class="row2">
+            <h1>academic programes</h1>
+            <h6>exolor university's 10+ cources across various specialization that <br>provoke intellectual and
+                intuitive learning among students.</h6>
+        </div>
+        <div class="row3">
+            <h6>/bachelor</h6>
+            <h6>/masters</h6>
+            <h6>/phd</h6>
+        </div>
+        <div class="row4">
 
-                
+            <!-- Swiper -->
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide myslide">
+                        <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                    </div>
+                </div>
             </div>
+
+
+
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-        <script src="script.js"></script>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
