--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
                 intuitive learning among students.</h6>
         </div>
         <div class="row3">
-            <h6>/bachelor</h6>
-            <h6>/masters</h6>
+            <h6>/bachelor</h64 <h6>/masters</h6>
             <h6>/phd</h6>
         </div>
         <div class="row4">
@@ -125,33 +124,56 @@
             <!-- Swiper -->
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide myslide">
-                        <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                    <div class="swiper-slide ">
+                        <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
+                        <div class="part1">
+                            <h4>School of Humanities <br> and sciences</h4>
+                        </div>
+                        <div class="part2">
+                            <div class="col1">
+                                <h6>/Bachelor</h6>
+                            </div>
+                            <div class="col2"><i class="fa-solid fa-arrow-right"></i></div>
+                        </div>
                     </div>
-                    <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                    <div class="swiper-slide ">
+                        <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
+                        <div class="part1">
+                            <h4>civil & environmental <br> engineering department</h4>
+                        </div>
+                        <div class="part2">
+                            <div class="col1">
+                                <h6>/Bachelor</h6>
+                            </div>
+                            <div class="col2"><i class="fa-solid fa-arrow-right"></i></div>
+                        </div>
                     </div>
-                    <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                    <div class="swiper-slide ">
+                        <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
+                        <div class="part1">
+                            <h4>School of Humanities <br> and sciences</h4>
+                        </div>
+                        <div class="part2">
+                            <div class="col1">
+                                <h6>/Bachelor</h6>
+                            </div>
+                            <div class="col2"><i class="fa-solid fa-arrow-right"></i></div>
+                        </div>
                     </div>
-                    <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                    <div class="swiper-slide ">
+                        <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
+                        <div class="part1">
+                            <h4>School of Humanities <br> and sciences</h4>
+                        </div>
+                        <div class="part2">
+                            <div class="col1">
+                                <h6>/Bachelor</h6>
+                            </div>
+                            <div class="col2"><i class="fa-solid fa-arrow-right"></i></div>
+                        </div>
                     </div>
-                    <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
-                    </div>
+                    
+
                 </div>
             </div>
 
