--- a/index.html
+++ b/index.html
@@ -79,107 +79,172 @@
                 <img src="./image/img1.jpg" alt="">
             </div>
         </div>
-    </div>
-    <div class="page2">
-        <div class="row1">
-            <div class="col1">
-                <h5>About University</h5>
-            </div>
-            <div class="col2">
-                <h1>educatiion is not <br> prepration for life; <br> education is life itself </h1>
-            </div>
-        </div>
-        <div class="row2">
-            <div class="col1 image-containerfor-row2"></div>
-            <div class="col2 image-containerfor-row2"><img
-                    src="https://plus.unsplash.com/premium_photo-1681248156422-c01a2c803588?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Y2xhc3Nyb29tfGVufDB8fDB8fHww"
-                    alt=""></div>
-            <div class="col3 image-containerfor-row2"><img
-                    src="https://images.unsplash.com/photo-1577985043696-8bd54d9f093f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FtcHVzfGVufDB8fDB8fHww"
-                    alt=""></div>
-        </div>
-        <div class="row3 ">
-            <div class="col1 image-containerfor-row2"><img
-                    src="https://plus.unsplash.com/premium_photo-1682974403683-591557aa631b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZGVncmVlJTIwaW4lMjBjb2xsZWdlfGVufDB8fDB8fHww"
-                    alt=""></div>
-            <div class="col2 image-containerfor-row2"><img
-                    src="https://images.unsplash.com/photo-1544640808-32ca72ac7f37?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGNsYXNzcm9vbXxlbnwwfHwwfHx8MA%3D%3D"
-                    alt=""></div>
-            <div class="col3 image-containerfor-row2"></div>
-        </div>
-    </div>
-    <div class="page3">
-        <div class="row1"></div>
-        <div class="row2">
-            <h1>academic programes</h1>
-            <h6>exolor university's 10+ cources across various specialization that <br>provoke intellectual and
-                intuitive learning among students.</h6>
-        </div>
-        <div class="row3">
-            <h6>/bachelor</h64 <h6>/masters</h6>
-            <h6>/phd</h6>
-        </div>
-        <div class="row4">
-
-            <!-- Swiper -->
-            <div class="swiper mySwiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide ">
-                        <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
-                        <div class="part1">
-                            <h4>School of Humanities <br> and sciences</h4>
-                        </div>
-                        <div class="part2">
-                            <div class="col1">
-                                <h6>/Bachelor</h6>
-                            </div>
-                            <div class="col2"><i class="fa-solid fa-arrow-right"></i></div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide ">
-                        <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
-                        <div class="part1">
-                            <h4>civil & environmental <br> engineering department</h4>
-                        </div>
-                        <div class="part2">
-                            <div class="col1">
-                                <h6>/Bachelor</h6>
-                            </div>
-                            <div class="col2"><i class="fa-solid fa-arrow-right"></i></div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide ">
-                        <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
-                        <div class="part1">
-                            <h4>School of Humanities <br> and sciences</h4>
-                        </div>
-                        <div class="part2">
-                            <div class="col1">
-                                <h6>/Bachelor</h6>
-                            </div>
-                            <div class="col2"><i class="fa-solid fa-arrow-right"></i></div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide ">
-                        <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
-                        <div class="part1">
-                            <h4>School of Humanities <br> and sciences</h4>
-                        </div>
-                        <div class="part2">
-                            <div class="col1">
-                                <h6>/Bachelor</h6>
-                            </div>
-                            <div class="col2"><i class="fa-solid fa-arrow-right"></i></div>
-                        </div>
-                    </div>
-                    
-
+        <div class="page2">
+            <div class="row1">
+                <div class="col1">
+                    <h5>About University</h5>
+                </div>
+                <div class="col2">
+                    <h1>educatiion is not <br> prepration for life; <br> education is life itself </h1>
                 </div>
             </div>
+            <div class="row2">
+                <div class="col1 image-containerfor-row2"></div>
+                <div class="col2 image-containerfor-row2"><img
+                        src="https://plus.unsplash.com/premium_photo-1681248156422-c01a2c803588?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Y2xhc3Nyb29tfGVufDB8fDB8fHww"
+                        alt=""></div>
+                <div class="col3 image-containerfor-row2"><img
+                        src="https://images.unsplash.com/photo-1577985043696-8bd54d9f093f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FtcHVzfGVufDB8fDB8fHww"
+                        alt=""></div>
+            </div>
+            <div class="row3 ">
+                <div class="col1 image-containerfor-row2"><img
+                        src="https://plus.unsplash.com/premium_photo-1682974403683-591557aa631b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZGVncmVlJTIwaW4lMjBjb2xsZWdlfGVufDB8fDB8fHww"
+                        alt=""></div>
+                <div class="col2 image-containerfor-row2"><img
+                        src="https://images.unsplash.com/photo-1544640808-32ca72ac7f37?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGNsYXNzcm9vbXxlbnwwfHwwfHx8MA%3D%3D"
+                        alt=""></div>
+                <div class="col3 image-containerfor-row2"></div>
+            </div>
+        </div>
+        <div class="page3">
+            <div class="row1"></div>
+            <div class="row2">
+                <h1>academic programes</h1>
+                <h6>exolor university's 10+ cources across various specialization that <br>provoke intellectual and
+                    intuitive learning among students.</h6>
+            </div>
+            <div class="row3">
+                <h6>/bachelor</h64 <h6>/masters</h6>
+                <h6>/phd</h6>
+            </div>
+            <div class="row4">
+
+                <!-- Swiper -->
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide ">
+                            <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
+                            <div class="part1">
+                                <h4>School of Humanities <br> and sciences</h4>
+                            </div>
+                            <div class="part2">
+                                <div class="col1">
+                                    <h6>/Bachelor</h6>
+                                </div>
+                                <div class="col2"><i class="fa-solid fa-arrow-right"></i></div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide ">
+                            <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
+                            <div class="part1">
+                                <h4>civil & environmental <br> engineering department</h4>
+                            </div>
+                            <div class="part2">
+                                <div class="col1">
+                                    <h6>/Bachelor</h6>
+                                </div>
+                                <div class="col2"><i class="fa-solid fa-arrow-right"></i></div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide ">
+                            <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
+                            <div class="part1">
+                                <h4>School of Humanities <br> and sciences</h4>
+                            </div>
+                            <div class="part2">
+                                <div class="col1">
+                                    <h6>/Bachelor</h6>
+                                </div>
+                                <div class="col2"><i class="fa-solid fa-arrow-right"></i></div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide ">
+                            <!-- <img src="https://swiperjs.com/demos/images/nature-1.jpg" /> -->
+                            <div class="part1">
+                                <h4>School of Humanities <br> and sciences</h4>
+                            </div>
+                            <div class="part2">
+                                <div class="col1">
+                                    <h6>/Bachelor</h6>
+                                </div>
+                                <div class="col2"><i class="fa-solid fa-arrow-right"></i></div>
+                            </div>
+                        </div>
 
 
+                    </div>
+                </div>
+
+
+            </div>
 
         </div>
+        <div class="page4">
+            <div class="row1">
+                <div class="col1">
+                    <h4>faculty</h4>
+                </div>
+                <div class="col2">
+                    <h1>our skilled faculty <br> helps students in <br> many diciplines</h1>
+                </div>
+            </div>
+            <div class="row2">
+                <div class="col1">
+                    <div class="contain-image">
+                        <img src="https://plus.unsplash.com/premium_photo-1661391644149-4fab855f2815?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZW52aXJvbm1lbnQlMjBzY2llbmNlfGVufDB8fDB8fHww"
+                            alt="">
+                    </div>
+                    <div class="image-details">
+                        <div class="part1">
+                            <h6>Bachelor</h6>
+                        </div>
+                        <div class="part2">
+                            <h5>faculty of <br> engineering and <br> technology</h5>
+                        </div>
+                        <div class="part3">
+                            <p>At,present there are five deparments within the faculty: deparments of geography and
+                                enviroment, geology, oceangraphy, disaster science and climate resillience and
+                                meteorology</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row2">
+                <div class="col1 mycol1">
+                    <div class="contain-image">
+                        <img src="https://images.unsplash.com/photo-1607237138185-eedd9c632b0b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y29sbGVnZSUyMGNhbXB1c3xlbnwwfHwwfHx8MA%3D%3D"
+                            alt="">
+                    </div>
+                    <div class="image-details">
+                        <div class="part1">
+                            <h6>Bachelor</h6>
+                        </div>
+                        <div class="part2">
+                            <h5>faculty of earth <br> and enviromental <br> science.</h5>
+                        </div>
+                        <div class="part3">
+                            <p>At,present there are five deparments <br> within the faculty: deparments of geography and
+                                enviroment, geology, oceangraphy, disaster science and climate resillience and
+                                meteorology</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row3">
+                <div class="allfaculty">
+                    <h4>see all faculty</h4>
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
