--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             <h6>Bachelor</h6>
                         </div>
                         <div class="part2">
-                            <h5>faculty of <br> engineering and <br> technology</h5>
+                            <h5>faculty of engineering <br>and <br> technology</h5>
                         </div>
                         <div class="part3">
                             <p>At,present there are five deparments within the faculty: deparments of geography and
@@ -221,7 +221,7 @@
                             <h6>Bachelor</h6>
                         </div>
                         <div class="part2">
-                            <h5>faculty of earth <br> and enviromental <br> science.</h5>
+                            <h5>faculty of earth <br> and <br>enviromental science</h5>
                         </div>
                         <div class="part3">
                             <p>At,present there are five deparments <br> within the faculty: deparments of geography and
