--- a/index.html
+++ b/index.html
@@ -237,7 +237,39 @@
                     <i class="fa-solid fa-arrow-up-right-from-square"></i>
                 </div>
             </div>
+
         </div>
+        <div class="page5">
+            <div class="onlycolor"></div>
+
+            <div class="page5div1">
+                <div class="part">
+                    <h2><span class="big">10k</span>students</h2>
+                    <h6>At Present,There are Five Departments <br> within the Faculty: Departmetnt of <br> geography
+                        and enviroment
+                    </h6>
+                </div>
+                <div class="part">
+                    <h2><span class="big">300</span> Professors</h2>
+                    <h6>Lorem, ipsum dolor sit amet <br> consectetur adipisicing elit. <br> Fugiat tempore dolore debitis <br> minus perferendis harum.</h6>
+                </div>
+                <div class="part">
+                    <h2><span class="big">70</span>Faculty</h2>
+                    <h6>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. <br> Accusamus delectus voluptas unde, <br>doloribus perferendis a!</h6>
+                </div>
+            </div>
+            <div class="page5div2">
+                <div class="part1">
+                    <h6>Campus Life</h6>
+                </div>
+                <div class="part2">
+                    <h1>university is the <br> best time of your <br>life</h1>
+                    <h6>
+                        Lorem, ipsum dolor sit amet <br>consectetur adipisicing elit. Delectus rem excepturi <br>ad
+                        nulla mollitia amet!
+                    </h6>
+                </div>
+            </div>
 
 
 
@@ -245,9 +277,10 @@
 
 
 
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="script.js"></script>
+
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
