--- a/index.html
+++ b/index.html
@@ -416,19 +416,123 @@
                 </div>
                 <div class="part2">
                     <div class="contain-details">
-                        
+                        <div class="part-1">
+                            <h6>OCT 20,2022</h6>
+                            <h6 id="but-bac">Bachelor</h6>
+                        </div>
+                        <div class="part-2">
+                            <h4>The middle east in the <br>twentieth century</h4>
+                        </div>
+                        <div class="part-3">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum exercitationem ab, nobis necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit, voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur. Explicabo, temporibus rem. Corrupti, deleniti quas vero non maiores praesentium quasi quisquam, accusamus aperiam tempora distinctio et. Porro sint facere saepe?</p>
+                        </div>
+                        <div class="part-4">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
                     </div>
                     <div class="contain-details">
-
+                        <div class="part-1">
+                            <h6>OCT 20,2022</h6>
+                            <h6 id="but-bac">Bachelor</h6>
+                        </div>
+                        <div class="part-2">
+                            <h4>The middle east in the <br>twentieth century</h4>
+                        </div>
+                        <div class="part-3">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum exercitationem ab, nobis necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit, voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur. Explicabo, temporibus rem. Corrupti, deleniti quas vero non maiores praesentium quasi quisquam, accusamus aperiam tempora distinctio et. Porro sint facere saepe?</p>
+                        </div>
+                        <div class="part-4">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="part2">
                     <div class="contain-details">
-                        
+                        <div class="part-1">
+                            <h6>OCT 20,2022</h6>
+                            <h6 id="but-bac">Bachelor</h6>
+                        </div>
+                        <div class="part-2">
+                            <h4>The middle east in the <br>twentieth century</h4>
+                        </div>
+                        <div class="part-3">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum exercitationem ab, nobis necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit, voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur. Explicabo, temporibus rem. Corrupti, deleniti quas vero non maiores praesentium quasi quisquam, accusamus aperiam tempora distinctio et. Porro sint facere saepe?</p>
+                        </div>
+                        <div class="part-4">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
                     </div>
                     <div class="contain-details">
-
+                        <div class="part-1">
+                            <h6>OCT 20,2022</h6>
+                            <h6 id="but-bac">Bachelor</h6>
+                        </div>
+                        <div class="part-2">
+                            <h4>The middle east in the <br>twentieth century</h4>
+                        </div>
+                        <div class="part-3">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum exercitationem ab, nobis necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit, voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur. Explicabo, temporibus rem. Corrupti, deleniti quas vero non maiores praesentium quasi quisquam, accusamus aperiam tempora distinctio et. Porro sint facere saepe?</p>
+                        </div>
+                        <div class="part-4">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="page9">
+            <div class="row1">
+                <h1>new & articles</h1>
+                <h3>Lorem ipsum dolor sit amet consectetur <br>adipisicing elit. Laudantium eum ad voluptate?</h3>
+            </div>
+            <div class="row2">
+                <div class="owl-carousel owl-theme myowl">
+                    <div class="item myown">
+                        <div class="row-1">
+                            <h6>/Bachelor</h6>
+                            <i class="fa-solid fa-square-up-right"></i>
+                        </div>
+                        <div class="row-2">
+                            <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                        </div>
+                    </div>
+                    <div class="item myown">
+                        <div class="row-1">
+                            <h6>/Bachelor</h6>
+                            <i class="fa-solid fa-square-up-right"></i>
+                        </div>
+                        <div class="row-2">
+                            <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                        </div>
+                    </div>
+                    <div class="item myown">
+                        <div class="row-1">
+                            <h6>/Bachelor</h6>
+                            <i class="fa-solid fa-square-up-right"></i>
+                        </div>
+                        <div class="row-2">
+                            <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                        </div>
+                    </div>
+                    <div class="item myown">
+                        <div class="row-1">
+                            <h6>/Bachelor</h6>
+                            <i class="fa-solid fa-square-up-right"></i>
+                        </div>
+                        <div class="row-2">
+                            <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                        </div>
+                    </div>
+                    <div class="item myown">
+                        <div class="row-1">
+                            <h6>/Bachelor</h6>
+                            <i class="fa-solid fa-square-up-right"></i>
+                        </div>
+                        <div class="row-2">
+                            <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
