--- a/index.html
+++ b/index.html
@@ -367,7 +367,8 @@
                         </div>
                         <div class="textdiv">
                             <span>demo <br>heading</span>
-                            <p>Lorem ipsum dolor sit amet <br>consectetur adipi sicing elit. <br>Aliquam hic odio,quisquam<br>possimus sint.</p>
+                            <p>Lorem ipsum dolor sit amet <br>consectetur adipi sicing elit. <br>Aliquam hic
+                                odio,quisquam<br>possimus sint.</p>
                         </div>
                     </div>
 
@@ -390,7 +391,7 @@
                     <div class="part1">de</div>
                     <div class="part3">de</div>
                 </div>
-                
+
             </div>
             <div class="onlycolor"></div>
 
@@ -424,7 +425,15 @@
                             <h4>The middle east in the <br>twentieth century</h4>
                         </div>
                         <div class="part-3">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum exercitationem ab, nobis necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit, voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur. Explicabo, temporibus rem. Corrupti, deleniti quas vero non maiores praesentium quasi quisquam, accusamus aperiam tempora distinctio et. Porro sint facere saepe?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum exercitationem ab, nobis
+                                necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet
+                                fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste
+                                tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit,
+                                voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque
+                                sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem
+                                veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur.
+                                Explicabo, temporibus rem. Corrupti, deleniti quas vero non maiores praesentium quasi
+                                quisquam, accusamus aperiam tempora distinctio et. Porro sint facere saepe?</p>
                         </div>
                         <div class="part-4">
                             <i class="fa-solid fa-arrow-right"></i>
@@ -439,7 +448,15 @@
                             <h4>The middle east in the <br>twentieth century</h4>
                         </div>
                         <div class="part-3">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum exercitationem ab, nobis necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit, voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur. Explicabo, temporibus rem. Corrupti, deleniti quas vero non maiores praesentium quasi quisquam, accusamus aperiam tempora distinctio et. Porro sint facere saepe?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum exercitationem ab, nobis
+                                necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet
+                                fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste
+                                tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit,
+                                voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque
+                                sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem
+                                veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur.
+                                Explicabo, temporibus rem. Corrupti, deleniti quas vero non maiores praesentium quasi
+                                quisquam, accusamus aperiam tempora distinctio et. Porro sint facere saepe?</p>
                         </div>
                         <div class="part-4">
                             <i class="fa-solid fa-arrow-right"></i>
@@ -456,7 +473,15 @@
                             <h4>The middle east in the <br>twentieth century</h4>
                         </div>
                         <div class="part-3">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum exercitationem ab, nobis necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit, voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur. Explicabo, temporibus rem. Corrupti, deleniti quas vero non maiores praesentium quasi quisquam, accusamus aperiam tempora distinctio et. Porro sint facere saepe?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum exercitationem ab, nobis
+                                necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet
+                                fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste
+                                tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit,
+                                voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque
+                                sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem
+                                veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur.
+                                Explicabo, temporibus rem. Corrupti, deleniti quas vero non maiores praesentium quasi
+                                quisquam, accusamus aperiam tempora distinctio et. Porro sint facere saepe?</p>
                         </div>
                         <div class="part-4">
                             <i class="fa-solid fa-arrow-right"></i>
@@ -471,7 +496,15 @@
                             <h4>The middle east in the <br>twentieth century</h4>
                         </div>
                         <div class="part-3">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum exercitationem ab, nobis necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit, voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur. Explicabo, temporibus rem. Corrupti, deleniti quas vero non maiores praesentium quasi quisquam, accusamus aperiam tempora distinctio et. Porro sint facere saepe?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum exercitationem ab, nobis
+                                necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet
+                                fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste
+                                tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit,
+                                voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque
+                                sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem
+                                veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur.
+                                Explicabo, temporibus rem. Corrupti, deleniti quas vero non maiores praesentium quasi
+                                quisquam, accusamus aperiam tempora distinctio et. Porro sint facere saepe?</p>
                         </div>
                         <div class="part-4">
                             <i class="fa-solid fa-arrow-right"></i>
@@ -536,7 +569,69 @@
                 </div>
             </div>
         </div>
-        .
+        <footer>
+            <div class="row1">
+                <div class="part1">
+                    <div class="col1">
+                        <h2>about us</h2>
+                        <h6>facts</h6>
+                        <h6>history</h6>
+                        <h6>contact</h6>
+                        <h6>management</h6>
+                    </div>
+                    <div class="col1">
+                        <h2>about us</h2>
+                        <h6>facts</h6>
+                        <h6>history</h6>
+                        <h6>contact</h6>
+                        <h6>management</h6>
+                    </div>
+                    <div class="col1">
+                        <h2>about us</h2>
+                        <h6>facts</h6>
+                        <h6>history</h6>
+                        <h6>contact</h6>
+                        <h6>management</h6>
+                    </div>
+                    <div class="col1">
+                        <h2>about us</h2>
+                        <h6>facts</h6>
+                        <h6>history</h6>
+                        <h6>contact</h6>
+                        <h6>management</h6>
+                    </div>
+                    <div class="col1">
+                        <h2>about us</h2>
+                        <h6>facts</h6>
+                        <h6>history</h6>
+                        <h6>contact</h6>
+                        <h6>management</h6>
+                    </div>
+                </div>
+                <div class="part2">
+                    <h5 id="appl">applying</h5>
+                    <h5>scholarship</h5>
+                    <h5 id="career">career</h5>
+                </div>
+            </div>
+            <div class="row2">
+                <div class="part1">
+                    <div class="img-container">
+                        <img src="./image/img2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="part2">
+                    <h6>copyright © 2022 xyzcompany</h6>
+                    <h6>all rights reserved</h6>
+                    <h6 id="privacy">privacy & policy</h6>
+                </div>
+                <div class="part3">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+            </div>
+        </footer>
 
 
 
