--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>College</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -21,6 +21,7 @@
 
 <body>
     <div class="main">
+
         <div class="page1">
             <div class="row1 for-hover">
                 <div class="part1 contacts"><a href="mailto:uutkarsh97@gmail.com"><i
@@ -500,9 +501,7 @@
                                 necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet
                                 fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste
                                 tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit,
-                                voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque
-                                sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem
-                                veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur.
+                                voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque.
                                 </p>
                         </div>
                         <div class="part-4">
@@ -522,10 +521,8 @@
                                 necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet
                                 fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste
                                 tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit,
-                                voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque
-                                sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem
-                                veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur.
-                                </p>
+                                voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque.
+                             </p>
                         </div>
                         <div class="part-4">
                             <i class="fa-solid fa-arrow-right"></i>
@@ -546,10 +543,7 @@
                                 necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet
                                 fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste
                                 tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit,
-                                voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque
-                                sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem
-                                veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur.
-                                </p>
+                                voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque.</p>
                         </div>
                         <div class="part-4">
                             <i class="fa-solid fa-arrow-right"></i>
@@ -568,10 +562,8 @@
                                 necessitatibus possimus accusantium ratione aliquam nesciunt magni nemo tempore eveniet
                                 fugiat ad quia repudiandae, adipisci placeat itaque id qui, vitae praesentium. Aut iste
                                 tempora alias consequatur. Aliquid, laudantium. Error aliquam quia voluptate sit,
-                                voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque
-                                sapiente eligendi. Harum nihil delectus cum, tenetur iusto quia laborum voluptatum autem
-                                veniam unde possimus adipisci, deleniti impedit libero consectetur. Tenetur, aspernatur.
-                                </p>
+                                voluptatum optio qui molestias, tempora quam enim ullam excepturi animi architecto neque.
+                            </p>
                         </div>
                         <div class="part-4">
                             <i class="fa-solid fa-arrow-right"></i>
@@ -583,7 +575,7 @@
         <div class="page9">
             <div class="row1">
                 <h1>new & articles</h1>
-                <h3>Lorem ipsum dolor sit amet consectetur <br>adipisicing elit. Laudantium eum ad voluptate?</h3>
+                <p>Lorem ipsum dolor sit amet consectetur <br>adipisicing elit. Laudantium eum ad voluptate?</p>
             </div>
             <div class="row2">
                 <div class="owl-carousel owl-theme myowl">
@@ -647,32 +639,32 @@
                         <h6>management</h6>
                     </div>
                     <div class="col1">
-                        <h2>about us</h2>
-                        <h6>facts</h6>
-                        <h6>history</h6>
-                        <h6>contact</h6>
-                        <h6>management</h6>
+                        <h2>faculty</h2>
+                        <h6>business</h6>
+                        <h6>engineering</h6>
+                        <h6>law</h6>
+                        <h6>Humanities & science</h6>
                     </div>
                     <div class="col1">
-                        <h2>about us</h2>
-                        <h6>facts</h6>
-                        <h6>history</h6>
-                        <h6>contact</h6>
-                        <h6>management</h6>
+                        <h2>department</h2>
+                        <h6>business</h6>
+                        <h6>engineering</h6>
+                        <h6>Humanities & science</h6>
+                        <h6>law</h6>
                     </div>
                     <div class="col1">
-                        <h2>about us</h2>
-                        <h6>facts</h6>
-                        <h6>history</h6>
-                        <h6>contact</h6>
-                        <h6>management</h6>
+                        <h2>Admission</h2>
+                        <h6>graduate</h6>
+                        <h6>undergraduate</h6>
+                        <h6>financial aid</h6>
+                        <h6>phd</h6>
                     </div>
                     <div class="col1">
-                        <h2>about us</h2>
-                        <h6>facts</h6>
-                        <h6>history</h6>
-                        <h6>contact</h6>
-                        <h6>management</h6>
+                        <h2>updates</h2>
+                        <h6>notice</h6>
+                        <h6>results</h6>
+                        <h6>login</h6>
+                        <h6>alumni</h6>
                     </div>
                 </div>
                 <div class="part2">
@@ -699,7 +691,8 @@
                 </div>
             </div>
         </footer>
-
+        
+    </div>
 
 
 
