--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
 
             </div>
             <div class="back">
-                <img src="./image/img1.jpg" alt="">
-                <img src="https://images.unsplash.com/photo-1714715362537-4aa538a6f0ab?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMXx8fGVufDB8fHx8fA%3D%3D"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1714756123393-929709970fdb?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMnx8fGVufDB8fHx8fA%3D%3D"
-                    alt="">
+                <img src="https://images.unsplash.com/photo-1715257742105-b4f626ce3c2d?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                <!-- <img src="https://images.unsplash.com/photo-1714715362537-4aa538a6f0ab?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMXx8fGVufDB8fHx8fA%3D%3D"
+                    alt=""> -->
+                <!-- <img src="https://images.unsplash.com/photo-1714756123393-929709970fdb?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMnx8fGVufDB8fHx8fA%3D%3D"
+                    alt=""> -->
             </div>
         </div>
         <div class="page2">
@@ -124,7 +124,8 @@
                     intuitive learning among students.</h6>
             </div>
             <div class="row3">
-                <h6>/bachelor</h64 <h6>/masters</h6>
+                <h6>/bachelor</h6>
+                <h6>/masters</h6>
                 <h6>/phd</h6>
             </div>
             <div class="row4">
@@ -283,7 +284,7 @@
             </div>
 
 
-
+            
 
 
 
