--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
             </div>
             <div class="back">
                 <img src="https://images.unsplash.com/photo-1715257742105-b4f626ce3c2d?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-                <!-- <img src="https://images.unsplash.com/photo-1714715362537-4aa538a6f0ab?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMXx8fGVufDB8fHx8fA%3D%3D"
-                    alt=""> -->
-                <!-- <img src="https://images.unsplash.com/photo-1714756123393-929709970fdb?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMnx8fGVufDB8fHx8fA%3D%3D"
-                    alt=""> -->
+                <img src="https://images.unsplash.com/photo-1714715362537-4aa538a6f0ab?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMXx8fGVufDB8fHx8fA%3D%3D"
+                    alt="">
+                <img src="https://images.unsplash.com/photo-1714756123393-929709970fdb?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMnx8fGVufDB8fHx8fA%3D%3D"
+                    alt="">
             </div>
         </div>
         <div class="page2">
@@ -709,7 +709,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Scroll Trigger is needed for Scroll Effects -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 
     <!-- Three.js is needed for 3d Effects -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
