--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 
             </div>
             <div class="back">
+                <img src="https://images.unsplash.com/photo-1714756123393-929709970fdb?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMnx8fGVufDB8fHx8fA%3D%3D"
+                    alt="">
                 <img src="https://images.unsplash.com/photo-1715257742105-b4f626ce3c2d?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                 <img src="https://images.unsplash.com/photo-1714715362537-4aa538a6f0ab?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMXx8fGVufDB8fHx8fA%3D%3D"
-                    alt="">
-                <img src="https://images.unsplash.com/photo-1714756123393-929709970fdb?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMnx8fGVufDB8fHx8fA%3D%3D"
                     alt="">
             </div>
         </div>
@@ -102,8 +102,9 @@
             </div>
             <div class="row2">
                 <div class="col1 image-containerfor-row2"></div>
-                <div class="col2 image-containerfor-row2"><img
-                        src="https://plus.unsplash.com/premium_photo-1681248156422-c01a2c803588?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Y2xhc3Nyb29tfGVufDB8fDB8fHww"
+                <div class="col2 image-containerfor-row2">
+                    <div class="imgdets"><h1>hello</h1></div>
+                    <img src="https://plus.unsplash.com/premium_photo-1681248156422-c01a2c803588?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Y2xhc3Nyb29tfGVufDB8fDB8fHww"
                         alt=""></div>
                 <div class="col3 image-containerfor-row2"><img
                         src="https://images.unsplash.com/photo-1577985043696-8bd54d9f093f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FtcHVzfGVufDB8fDB8fHww"
