--- a/index.html
+++ b/index.html
@@ -106,15 +106,18 @@
                     <div class="imgdets"><h1>hello</h1></div>
                     <img src="https://plus.unsplash.com/premium_photo-1681248156422-c01a2c803588?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Y2xhc3Nyb29tfGVufDB8fDB8fHww"
                         alt=""></div>
-                <div class="col3 image-containerfor-row2"><img
+                <div class="col3 image-containerfor-row2">
+                    <div class="imgdets"><h1>hello</h1></div><img
                         src="https://images.unsplash.com/photo-1577985043696-8bd54d9f093f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FtcHVzfGVufDB8fDB8fHww"
                         alt=""></div>
             </div>
             <div class="row3 ">
-                <div class="col1 image-containerfor-row2"><img
+                <div class="col1 image-containerfor-row2">
+                    <div class="imgdets"><h1>hello</h1></div><img
                         src="https://plus.unsplash.com/premium_photo-1682974403683-591557aa631b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZGVncmVlJTIwaW4lMjBjb2xsZWdlfGVufDB8fDB8fHww"
                         alt=""></div>
-                <div class="col2 image-containerfor-row2"><img
+                <div class="col2 image-containerfor-row2">
+                    <div class="imgdets"><h1>hello</h1></div><img
                         src="https://images.unsplash.com/photo-1544640808-32ca72ac7f37?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGNsYXNzcm9vbXxlbnwwfHwwfHx8MA%3D%3D"
                         alt=""></div>
                 <div class="col3 image-containerfor-row2"></div>
