page5 animation completed

--- a/index.html
+++ b/index.html
@@ -261,28 +261,28 @@
 
             <div class="page5div1">
                 <div class="part">
-                    <h2><span class="big">10k</span>students</h2>
+                    <h2><span class="big"> <span id="num1">00</span>k</span>students</h2>
                     <h6>At Present,There are Five Departments <br> within the Faculty: Departmetnt of <br> geography
                         and enviroment
                     </h6>
                 </div>
                 <div class="part">
-                    <h2><span class="big">300</span> Professors</h2>
+                    <h2><span class="big" id="num2">000</span> Professors</h2>
                     <h6>Lorem, ipsum dolor sit amet <br> consectetur adipisicing elit. <br> Fugiat tempore dolore
                         debitis <br> minus perferendis harum.</h6>
                 </div>
                 <div class="part">
-                    <h2><span class="big">70</span>Faculty</h2>
+                    <h2><span class="big" id="num3">00</span>Faculty</h2>
                     <h6>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. <br> Accusamus delectus voluptas
                         unde, <br>doloribus perferendis a!</h6>
                 </div>
             </div>
             <div class="page5div2">
                 <div class="part1">
-                    <h6>Campus Life</h6>
+                    <h6 data-scroll data-scroll-direction="horizontal " data-scroll-speed="2">Campus Life</h6>
                 </div>
                 <div class="part2">
-                    <h1>university is the <br> best time of your <br>life</h1>
+                    <h1 data-scroll data-scroll-direction="horizontal " data-scroll-speed="2">university is the <br> best time of your <br>life</h1>
                     <h6>
                         Lorem, ipsum dolor sit amet <br>consectetur adipisicing elit. Delectus rem excepturi <br>ad
                         nulla mollitia amet!
