--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
 
                 </div>
-                <div class="heading">
+                <div data-scroll data-scroll-direction="horizontal " data-scroll-speed="3" class="heading">
                     <div class="elem">
                         <h1>learn from the coolest <br>education platfrom <br> of the india</h1>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Error alias odio, quia ipsa vero iusto inventore officia id eum culpa.</p>
@@ -391,9 +391,9 @@
             <div class="middlerow">
                 <div class="col1">
                     <div class="writeen">
-                        <h6>Testimonial</h6>
-                        <h2>students</h2>
-                        <h3>feedback</h3>
+                        <h3 id="test">Testimonial</h3>
+                        <h3 id="students">students</h3>
+                        <h3 id="feedback">feedback</h3>
                     </div>
                 </div>
                 <div class="col2">
@@ -494,10 +494,10 @@
             </div>
             <div class="col2">
                 <div class="part1">
-                    <h1>recent and <br>upcoming events</h1>
+                    <h1 data-scroll data-scroll-direction="vertical " data-scroll-speed="2" >recent and <br>upcoming events</h1>
                 </div>
-                <div class="part2">
-                    <div class="contain-details">
+                <div   class="  part2">
+                    <div data-scroll data-scroll-direction="vertical " data-scroll-speed="2"class=" contain-details">
                         <div class="part-1">
                             <h6>OCT 20,2022</h6>
                             <h6 id="but-bac">Bachelor</h6>
@@ -518,7 +518,7 @@
                             <i class="fa-solid fa-arrow-right"></i>
                         </div>
                     </div>
-                    <div class="contain-details">
+                    <div  class="contain-details">
                         <div class="part-1">
                             <h6>OCT 20,2022</h6>
                             <h6 id="but-bac">Bachelor</h6>
@@ -541,7 +541,7 @@
                     </div>
                 </div>
                 <div class="part2">
-                    <div class="contain-details">
+                    <div data-scroll data-scroll-direction="vertical " data-scroll-speed="2" class="contain-details">
                         <div class="part-1">
                             <h6>OCT 20,2022</h6>
                             <h6 id="but-bac">Bachelor</h6>
@@ -561,7 +561,7 @@
                             <i class="fa-solid fa-arrow-right"></i>
                         </div>
                     </div>
-                    <div class="contain-details">
+                    <div  class="contain-details">
                         <div class="part-1">
                             <h6>OCT 20,2022</h6>
                             <h6 id="but-bac">Bachelor</h6>
